# tortillanomics

./: .gitignore  README.md  pyproject.toml
dashboard/pages/: index.md  metodologia.md
dashboard/sources/tortilla/: channel_gap.sql  city.sql  connection.yaml  dispersion.sql  inflation.sql  prices_daily.sql
data/raw/tortilla/anio=2007/mes=01/canal=autoservicios/: data.parquet
data/raw/tortilla/anio=2007/mes=01/canal=tortillerias/: data.parquet
data/raw/tortilla/anio=2007/mes=02/canal=autoservicios/: data.parquet
data/raw/tortilla/anio=2007/mes=02/canal=tortillerias/: data.parquet
data/raw/tortilla/anio=2007/mes=03/canal=autoservicios/: data.parquet
data/raw/tortilla/anio=2007/mes=03/canal=tortillerias/: data.parquet
data/raw/tortilla/anio=2007/mes=04/canal=autoservicios/: data.parquet
data/raw/tortilla/anio=2007/mes=04/canal=tortillerias/: data.parquet
data/raw/tortilla/anio=2007/mes=05/canal=autoservicios/: data.parquet
data/raw/tortilla/anio=2007/mes=05/canal=tortillerias/: data.parquet
data/raw/tortilla/anio=2007/mes=06/canal=autoservicios/: data.parquet
data/raw/tortilla/anio=2007/mes=06/canal=tortillerias/: data.parquet
ingestion/: scrape_sniim.py
tortillanomics_dbt/: .user.yml  dbt_project.yml  package-lock.yml
tortillanomics_dbt/models/marts/: _marts_models.yml  dim_city.sql  fct_tortilla_prices_daily.sql  mart_channel_gap.sql  mart_price_dispersion.sql  mart_price_inflation.sql
tortillanomics_dbt/models/staging/: _stg_models.yml  sources.yml  stg_sniim__tortilla_prices.sql
tortillanomics_dbt/seeds/: _seeds.yml  cities.csv
(+456 files in other folders)
